--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-## User settings
+# ==============
+# Xcodegen
+# ==============
+
+# /*.xcodeproj
+# *.xcworkspace/
+# Info.plist
+
+# ==============
+# Xcode
+# ==============
+
+build/
+Build/
+
+DerivedData/
+xcuserdata/
 xcuserdata/
 
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
+project.xcworkspace/xcshareddata/
+project.xcworkspace/
 
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
-*.moved-aside
+*.xcuserstate
+
+
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,70 +32,82 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-
-## Obj-C/Swift specific
+*.xccheckout
+*.moved-aside
 *.hmap
-
-## App packaging
 *.ipa
-*.dSYM.zip
-*.dSYM
 
-## Playgrounds
+*.o
+
 timeline.xctimeline
-playground.xcworkspace
 
+# ==============
 # Swift Package Manager
-#
-# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
-# *.xcodeproj
-#
-# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
-# hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+# ==============
 
 .build/
+/Packages
+Package.resolved
+.swiftpm/
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
-# Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+# ==============
+# RSwift
+# ==============
 
+R.generated.swift
+
+# ==============
+# MacOS
+# ==============
+
+.DS_Store
+
+# ==============
+# Linux
+# ==============
+
+*.swp
+*.swo
+
+# direnv
+.envrc
+
+# ==============
+# LicensePlist
+# ==============
+
+com.mono0926.LicensePlist
+com.mono0926.LicensePlist.*
+
+# ==============
 # Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
+# ==============
 
-Carthage/Build/
+Carthage/
 
-# Accio dependency management
-Dependencies/
-.accio/
+# ==============
+# CocoaPods
+# ==============
 
+Pods
+
+# ==============
+# Bundle
+# ==============
+
+vendor/
+
+# ==============
 # fastlane
-#
-# It is recommended to not store the screenshots in the git repo.
-# Instead, use fastlane to re-generate the screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
+# ==============
 
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
-# Code Injection
-#
-# After new code Injection tools there's a generated folder /iOSInjectionProject
-# https://github.com/johnno1962/injectionforxcode
+# ==============
+# etc.
+# ==============
 
-iOSInjectionProject/
+infer-out/
